# SelectSequencesFromMSA

./: .travis.yml  README.md  SelectSequences.cabal  SelectSequencesFromMSA.cabal  changelog  stack.yaml
src/Bio/: SelectSequences.hs  SelectSequencesLibrary.hs
