name:                SelectSequences
version:             1.0.1
synopsis:            Unsupervized construction of RNA family models
description:         RNAlien is a tool for automatic construction of RNAfamily models from a single sequence.
                     .
                     Dependencies:
		     .
		     * <https://www.tbi.univie.ac.at/~wash/RNAz/ RNAz>

                     Installation via cabal-install:
                     .
                     > cabal install SelectSequences
		     
license:             GPL-3
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@tbi.univie.ac.at         
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/eggzilla/SelectSequences

source-repository this
  type:     git
  location: https://github.com/eggzilla/SelectSequences/tree/1.0.1
  tag:      1.0.1
                     
executable SelectSequences
  Hs-Source-Dirs:      ./src/Bio/
  main-is:             SelectSequences.hs
  ghc-options:         -Wall -O
  build-depends:       base >=4.5 && <5, cmdargs, either-unwrap, SelectSequences, directory

Library
  Hs-Source-Dirs:      ./src/
  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
  build-depends:       base >=4.5 && <5, cmdargs, ViennaRNAParser>=1.3.2, process, directory, biofasta, parsec, biocore, bytestring, either-unwrap, containers, ClustalParser>=1.2.1, vector, matrix, filepath, text, transformers, text-metrics
  Exposed-Modules:     Bio.SelectSequencesLibrary
